--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   },
   "dependencies": {
     "@nvitaterna/rpi-led-matrix": "^1.16.0",
-    "sharp": "^0.33.0"
+    "dotenv": "^16.3.1",
+    "sharp": "^0.33.0",
+    "zod": "^3.22.4"
   }
 }
