--- a/package.json
+++ b/package.json
@@ -4,26 +4,26 @@
   "description": "NHL Led Scoreboard written in typescript",
   "main": "index.js",
   "license": "MIT",
+  "type": "module",
   "scripts": {
     "build": "tsc",
     "lint": "eslint ./src --fix",
     "format": "prettier --write \"src/**/*.ts\"",
-    "dev": "ts-node"
+    "dev": "ts-node ./src/main"
   },
   "devDependencies": {
-    "@types/node": "^20.10.4",
-    "@typescript-eslint/eslint-plugin": "^6.13.2",
-    "@typescript-eslint/parser": "^6.13.2",
-    "eslint": "^8.55.0",
-    "eslint-plugin-prettier": "^5.0.1",
-    "prettier": "^3.1.0",
+    "@types/node": "^20.11.20",
+    "@typescript-eslint/eslint-plugin": "^7.0.2",
+    "@typescript-eslint/parser": "^7.0.2",
+    "eslint": "^8.57.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "prettier": "^3.2.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   },
   "dependencies": {
     "@nvitaterna/rpi-led-matrix": "^1.16.0",
-    "dotenv": "^16.3.1",
-    "sharp": "^0.33.0",
-    "zod": "^3.22.4"
+    "conf": "^12.0.0",
+    "sharp": "^0.33.2"
   }
 }
