--- a/package.json
+++ b/package.json
@@ -6,24 +6,28 @@
   "license": "MIT",
   "type": "module",
   "scripts": {
+    "start": "node build/src/main.js",
+    "clean": "rimraf coverage build tmp",
+    "prebuild": "npm run lint && npm run format",
     "build": "tsc",
-    "lint": "eslint ./src --fix",
-    "format": "prettier --write \"src/**/*.ts\"",
-    "dev": "ts-node ./src/main"
+    "lint": "eslint . --ext .ts --ext .mts",
+    "test": "vitest",
+    "prettier": "prettier --config .prettierrc --write ."
   },
   "devDependencies": {
-    "@types/node": "^20.11.20",
-    "@typescript-eslint/eslint-plugin": "^7.0.2",
-    "@typescript-eslint/parser": "^7.0.2",
+    "@types/node": "^20.12.4",
+    "@typescript-eslint/eslint-plugin": "^7.5.0",
+    "@typescript-eslint/parser": "^7.5.0",
     "eslint": "^8.57.0",
     "eslint-plugin-prettier": "^5.1.3",
+    "msw": "^2.2.13",
     "prettier": "^3.2.5",
     "ts-node": "^10.9.2",
-    "typescript": "^5.3.3"
+    "typescript": "^5.4.3",
+    "vitest": "^1.4.0"
   },
   "dependencies": {
     "@nvitaterna/rpi-led-matrix": "^1.16.0",
-    "conf": "^12.0.0",
-    "sharp": "^0.33.2"
+    "sharp": "^0.33.3"
   }
 }
