--- a/package.json
+++ b/package.json
@@ -10,26 +10,28 @@
     "clean": "rimraf coverage build tmp",
     "prebuild": "npm run lint && npm run format",
     "build": "tsc",
-    "lint": "eslint . --ext .ts --ext .mts",
+    "lint": "eslint src",
     "test": "vitest --run",
     "coverage": "vitest run --coverage",
     "prettier": "prettier --config .prettierrc --write ."
   },
   "devDependencies": {
+    "@eslint/js": "^9.1.1",
     "@types/better-sqlite3": "^7.6.10",
     "@types/node": "^20.12.7",
     "@types/node-persist": "^3.1.8",
-    "@typescript-eslint/eslint-plugin": "^7.7.1",
-    "@typescript-eslint/parser": "^7.7.1",
-    "@vitest/coverage-v8": "^1.5.0",
-    "eslint": "^9.1.0",
+    "@vitest/coverage-v8": "^1.5.1",
+    "eslint": "^9.1.1",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
+    "globals": "^15.0.0",
     "msw": "^2.2.14",
     "pino-pretty": "^11.0.0",
     "prettier": "^3.2.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5",
-    "vitest": "^1.5.0"
+    "typescript-eslint": "^7.7.1",
+    "vitest": "^1.5.1"
   },
   "dependencies": {
     "@nvitaterna/rpi-led-matrix": "^1.16.0",
@@ -37,9 +39,9 @@
     "dotenv": "^16.4.5",
     "kysely": "^0.27.3",
     "node-persist": "^4.0.1",
-    "pino": "^8.20.0",
+    "pino": "^9.0.0",
     "sharp": "^0.33.3",
     "timezones-list": "^3.0.3",
-    "zod": "^3.23.0"
+    "zod": "^3.23.4"
   }
 }
