--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "format": "prettier --write .",
     "prebuild": "npm run lint && npm run format",
     "build": "tsc --project tsconfig.build.json && tsc-alias -p tsconfig.build.json",
-    "lint": "eslint src",
+    "lint": "eslint src --fix",
     "test": "vitest --run",
     "coverage": "vitest run --coverage"
   },
