--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@nvitaterna/rpi-led-matrix": "^1.16.0",
     "better-sqlite3": "^9.5.0",
     "date-fns": "^3.6.0",
+    "date-fns-tz": "^3.1.3",
     "dotenv": "^16.4.5",
     "kysely": "^0.27.3",
     "node-persist": "^4.0.1",
