--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "start": "node build/src/main.js",
     "clean": "rimraf coverage build tmp",
     "format": "prettier --write .",
-    "prebuild": "npm run lint && npm run format",
     "build": "tsc --project tsconfig.build.json && tsc-alias -p tsconfig.build.json",
     "lint": "eslint src --fix",
     "test": "vitest --run",
@@ -38,6 +37,8 @@
   "dependencies": {
     "@nvitaterna/rpi-led-matrix": "^1.16.0",
     "better-sqlite3": "^9.5.0",
+    "date-fns": "^3.6.0",
+    "date-fns-tz": "^3.1.3",
     "dotenv": "^16.4.5",
     "kysely": "^0.27.3",
     "node-persist": "^4.0.1",
