--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 version: '3'
 services:
   led-matrix:
+    image: nvitaterna/rpi-nhl-led-scoreboard
     devices:
       - '/dev/gpiomem:/dev/gpiomem'
       - '/dev/mem:/dev/mem'
